--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.23.0",
     "e": "^0.2.1",
     "install": "^0.13.0",
+    "route": "^0.2.5",
     "serve-favicon": "^2.5.0",
     "ws": "^8.3.0",
     "xpress": "^2.4.6"
