--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "bootstrap": "^3.4.1",
         "cookie-parser": "~1.4.4",
+        "crypto": "^1.0.1",
         "debug": "~2.6.9",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
