--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
         "start": "nodemon ./bin/www"
     },
     "dependencies": {
+        "arraybuffer-to-string": "^1.0.2",
         "bootstrap": "^3.4.1",
         "cookie-parser": "~1.4.4",
+        "crypto": "^1.0.1",
+        "crypto-js": "^4.1.1",
         "debug": "~2.6.9",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "morgan": "~1.9.1",
+        "require": "^0.4.4",
+        "uniqid": "^5.4.0",
         "util": "^0.12.4",
         "ws": "^8.3.0"
     }
