- add Challenge-response auth system

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "bootstrap": "^3.4.1",
         "cookie-parser": "~1.4.4",
         "crypto": "^1.0.1",
+        "crytpo-js": "^0.0.1-security",
         "debug": "~2.6.9",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
